--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -18,6 +18,21 @@ table {
         ul {
             margin-top: 0.5rem;
             margin-bottom: 0;
+
+            &.tasks {
+                li {
+                    padding-right: 2.75rem;
+
+                    .status {
+                        position: absolute;
+                        right: .5rem;
+
+                        .MuiSvgIcon-root {
+                            font-size: 1rem;
+                        }
+                    }
+                }
+            }
         }
     }
 }
